mobile view updates, big screen white space fix

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .cardHeight {
-    height: 500px;
+    height: 600px;
 }
 
 .imageCrop {
